// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component Mini badge error 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#ff190c",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</Component>
`;

exports[`Badge Component Mini badge primary 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</Component>
`;

exports[`Badge Component Mini badge success 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#52c41a",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</Component>
`;

exports[`Badge Component Mini badge warning 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#faad14",
        "borderColor": "#fff",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "height": 8,
        "justifyContent": "center",
        "minWidth": 8,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
      }
    }
  />
</Component>
`;

exports[`Badge Component should allow badge style 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "pink",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </Component>
</Component>
`;

exports[`Badge Component should allow custom component 1`] = `
<Component
  style={Object {}}
>
  <TouchableWithoutFeedback
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </TouchableWithoutFeedback>
</Component>
`;

exports[`Badge Component should apply container style in the badge 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "orange",
    }
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </Component>
</Component>
`;

exports[`Badge Component should have a touchable when onPress is passed in 1`] = `
<Component
  style={Object {}}
>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[MockFunction]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </TouchableOpacity>
</Component>
`;

exports[`Badge Component should pass value props should still work 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      foo
    </Text>
  </Component>
</Component>
`;

exports[`Badge Component should render if element included 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      title="foo"
    />
  </Component>
</Component>
`;

exports[`Badge Component should render without issue 1`] = `
<Component
  style={Object {}}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#2089dc",
        "borderColor": "#fff",
        "borderRadius": 9,
        "borderWidth": 0.5,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontSize": 12,
          "paddingHorizontal": 4,
        }
      }
    >
      10
    </Text>
  </Component>
</Component>
`;
